modules/gdscript/tests/scripts/analyzer/errors/export_node_in_non_node_derived_class_2.gd
# GH-82809

extends Node

class Inner:
	@export var node: Node

func test():
	pass
